* Add a gap and start fix image gallery a bit

--- a/src/App.less
+++ b/src/App.less
@@ -7,6 +7,7 @@
 @import 'assets/less/UpcomingShows';
 @import 'assets/less/VideosPage';
 @import 'assets/less/MerchPage';
+@import 'assets/less/common/ImageGallery';
 
 @green-1: #c5d1ca;
 @green-2: #b9c4be;
@@ -95,6 +96,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 12px;
 }
 
 .baseline {
@@ -126,7 +128,7 @@
 }
 
 .button-container {
-  padding-right: 8px;
+  padding: 0 12px;
 }
 
 .tag-input {
