--- a/src/assets/less/AppLayout.less
+++ b/src/assets/less/AppLayout.less
@@ -20,7 +20,7 @@
   .white-text;
   background: transparent;
   width: 100%;
-  height: 208px;
+  height: 64px;
   padding: 8px;
 }
 
