--- a/src/assets/less/HomePage.less
+++ b/src/assets/less/HomePage.less
@@ -12,11 +12,3 @@
   .clickable;
   font-size: 48px;
 }
-
-.carousel-container {
-  .flex-row;
-  padding: 16px;
-  width: 80%;
-  background: black;
-  min-height: 400px;
-}
